name:                immortal-worker
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2020 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Concurrency
extra-source-files:
    README.md
    CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
      Control.Immortal.Worker
  build-depends:
        base                   >= 4.7  && < 4.15
      , deepseq                >= 1.4  && < 1.5
      , immortal               >= 0.3  && < 0.4
      , monad-logger           >= 0.3  && < 0.4
      , safe-exceptions        >= 0.1  && < 0.2
      , text                   >= 1.2  && < 1.3
      , unliftio-core          >= 0.1  && < 0.2
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
    ScopedTypeVariables
